--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-RFID\Firebase\rfidbooklib-firebase-adminsdk-gjxai-3c95b75566.json
+RFID/Firebase/rfidbooklib-firebase-adminsdk-gjxai-3c95b75566.json
